# UrbanSatna

./: .gitignore  CLAUDE.md  README.md  render.yaml  start.sh
backend/: .env.example  Cargo.toml  Dockerfile  dump.rdb
backend/migrations/: 0001_foundations.down.sql  0001_foundations.sql  0002_seed_rbac.down.sql  0002_seed_rbac.sql  0003_catalog_bookings.down.sql  0003_catalog_bookings.up.sql  0004_app_settings.down.sql  0004_app_settings.up.sql  0005_worker_verification_arrival_otp.down.sql  0005_worker_verification_arrival_otp.sql  0006_user_avatars.down.sql  0006_user_avatars.sql  0007_kyc_documents.down.sql  0007_kyc_documents.sql  0008_cancel_reason.down.sql  0008_cancel_reason.sql  0009_money_location_coupons_tickets_chat.down.sql  0009_money_location_coupons_tickets_chat.sql  0010_profiles_blocking_ticket_lifecycle.down.sql  0010_profiles_blocking_ticket_lifecycle.up.sql  0011_support_chat.down.sql  0011_support_chat.sql  0012_admin_not_customer.down.sql  0012_admin_not_customer.up.sql  0012_three_fixed_roles.sql  0013_support_message_attachments.down.sql  0013_support_message_attachments.up.sql
backend/scripts/: check_migrations.sh  db.sh
backend/src/: main.rs  state.rs
backend/src/api/: admin.rs  app_config.rs  auth.rs  bookings.rs  catalog.rs  chat.rs  coupons.rs  envelope.rs  health.rs  me.rs  mod.rs  support.rs  tickets.rs
backend/src/config/: mod.rs
backend/src/domain/: booking.rs  error.rs  mod.rs
backend/src/infra/: bot.rs  db.rs  jwt.rs  mod.rs  otp.rs  redis.rs
backend/src/infra/db/: audit.rs  bookings.rs  (+10 more)
backend/src/middleware/: auth.rs
(+70 files in other folders)
